# hass_local_openai_llm

./: README.md  README.vi.md  pyproject.toml
.github/workflows/: hassfest.yml  validate.yml
custom_components/local_openai/: ai_task.py  config_flow.py  const.py  entity.py  manifest.json
custom_components/local_openai/translations/: en.json
